#Yetenek Menüsü tamamlandı.. -Yetenek Listeleme, ekleme, silme ve güncelleme işlemleri tamamlandı. -Yetenek listeleme için kullanılan index sayfasında simple tablo kullanıldı ve yetenek oranına göre if else şart komutları renklendirme yapıldı.

--- a/MvcCvWebProject/Views/Shared/AdminLayout.cshtml
+++ b/MvcCvWebProject/Views/Shared/AdminLayout.cshtml
@@ -198,49 +198,49 @@
                         <li class="nav-header">MENÜ</li>
                         <li class="nav-item">
                             <a href="/Hakkimda/Index/" class="nav-link">
-                                <i class="nav-icon fas fa-file"></i>
+                                <i class="nav-icon fas fa-person-booth"></i>
                                 <p>Hakkımda</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="https://adminlte.io/docs/3.0" class="nav-link">
-                                <i class="nav-icon fas fa-file"></i>
+                            <a href="/Deneyim/Index/" class="nav-link">
+                                <i class="nav-icon fas fa-business-time"></i>
                                 <p>Deneyimlerim</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="https://adminlte.io/docs/3.0" class="nav-link">
-                                <i class="nav-icon fas fa-file"></i>
+                            <a href="/Egitim/Index/" class="nav-link">
+                                <i class="nav-icon fas fa-pencil-ruler"></i>
                                 <p>Eğitimlerim</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="https://adminlte.io/docs/3.0" class="nav-link">
-                                <i class="nav-icon fas fa-file"></i>
+                            <a href="/Yetenek/Index/" class="nav-link">
+                                <i class="nav-icon fas fa-code"></i>
                                 <p>Yeteneklerim</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="https://adminlte.io/docs/3.0" class="nav-link">
-                                <i class="nav-icon fas fa-file"></i>
+                            <a href="/Hobi/Index/" class="nav-link">
+                                <i class="nav-icon fas fa-running"></i>
                                 <p>Hobilerim</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="https://adminlte.io/docs/3.0" class="nav-link">
-                                <i class="nav-icon fas fa-file"></i>
+                            <a href="/Sertifika/Index/" class="nav-link">
+                                <i class="nav-icon fas fa-book"></i>
                                 <p>Sertifikalarım</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="https://adminlte.io/docs/3.0" class="nav-link">
-                                <i class="nav-icon fas fa-file"></i>
+                            <a href="/iletisim/Index/" class="nav-link">
+                                <i class="nav-icon fas fa-envelope"></i>
                                 <p>İletişim</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="https://adminlte.io/docs/3.0" class="nav-link">
-                                <i class="nav-icon fas fa-file"></i>
+                            <a href="~/LoginTema/LogOut/" class="nav-link">
+                                <i class="nav-icon fas fa-lock"></i>
                                 <p>Çıkış Yap</p>
                             </a>
                         </li>
