--- a/MvcCvWebProject/Views/Egitim/Index.cshtml
+++ b/MvcCvWebProject/Views/Egitim/Index.cshtml
@@ -62,7 +62,7 @@
             </tfoot>
         </table>
         <br />
-        <a href="Egitim/EgitimEkle/" class="btn btn-success">Yeni Eğitim Ekle</a>
+        <a href="/Egitim/EgitimEkle/" class="btn btn-success">Yeni Eğitim Ekle</a>
     </div>
 
 </div>
