--- a/MvcCvWebProject/Views/Shared/AdminLayout.cshtml
+++ b/MvcCvWebProject/Views/Shared/AdminLayout.cshtml
@@ -184,7 +184,7 @@
 
 
 
-                        <a href="#" class="d-block">sefa </a>
+                        <a href="https://sefaasik.com/" class="d-block">Sefa AŞIK </a>
 
                     </div>
                 </div>
@@ -239,13 +239,13 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="~/LoginTema/LogOut/" class="nav-link">
+                            <a href="~/Login/LogOut/" class="nav-link">
                                 <i class="nav-icon fas fa-lock"></i>
                                 <p>Çıkış Yap</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="https://adminlte.io/docs/3.0" class="nav-link">
+                            <a href="/Kullanici/Index/" class="nav-link">
                                 <i class="nav-icon fas fa-file"></i>
                                 <p>Kullanıcı Ayarları</p>
                             </a>
@@ -299,7 +299,7 @@
         </div>
         <!-- /.content-wrapper -->
         <footer class="main-footer">
-            <strong>Copyright  &copy; 2023 <a href="http://adminlte.io">sefaasik.com</a></strong>
+            <strong>Copyright  &copy; 2024 <a href="https://sefaasik.com/">sefaasik.com</a></strong>
             Tüm Hakları Saklıdır.
             <div class="float-right d-none d-sm-inline-block">
                 <b>Version</b> 1.0
