--- a/MvcCvWebProject/Views/Yetenek/Index.cshtml
+++ b/MvcCvWebProject/Views/Yetenek/Index.cshtml
@@ -62,13 +62,7 @@
                                         </td>
                                         <td><span class="@labelrenk">@item.YetenekOran%</span></td>
 
-                                        <td>
-                                            <a class="btn btn-info btn-sm" href="/Yetenek/YetenekGetir/@item.YetenekID">
-                                                <i class="fas fa-pencil-alt">
-                                                </i>
-                                                Düzenle
-                                            </a>
-                                        </td>
+                                        <td><a class="btn btn-info btn-sm" href="/Yetenek/YetenekGetir/@item.YetenekID"><i class="fas fa-pencil-alt"></i>Düzenle</a></td>
                                         <td>
                                             <a class="btn btn-danger btn-sm" href="/Yetenek/YetenekSil/@item.YetenekID">
                                                 <i class="fas fa-trash">
